# rickchurch

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE-THIRD-PARTY  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  tox.ini
.github/workflows/: status_embed.yaml  validation.yaml
postgres/: init.sql
rickchurch/: __init__.py  auth.py  church.py  constants.py  log.py  models.py  tasks.py  utils.py
rickchurch/static/: styles.css
rickchurch/templates/: api_token.html  base.html  cookie_disabled.html  docs.html  head.html  index.html
