[tool.poetry]
name = "rickchurch"
version = "1.0.0"
description = "API for the Church of Rick"
authors = ["ItsDrike <itsdrikeofficial@gmail.com>", "Scoder12 <34356756+Scoder12@users.noreply.github.com>", "MaxT <25856189+MaxTCodes@users.noreply.github.com>]
license = "AGPL"

[tool.poetry.dependencies]
python = "3.8.*"
fastapi = {extras = ["all"], version = "^0.65.1"}
pydispix = {git = "https://github.com/ItsDrike/pydispix", rev = "async"}
python-decouple = "^3.4"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
asyncpg = "^0.23.0"
httpx = "^0.18.1"

[tool.poetry.dev-dependencies]
autopep8 = "~=1.5.7"
flake8 = "~=3.9.2"
flake8-bugbear = "~=21.4.3"
flake8-import-order = "~=0.18.1"
flake8-tidy-imports = "~=4.3.0"
pep8-naming = "~=0.11.1"
ipython = "~=7.24.0"
pre-commit = "~=2.13.0"
taskipy = "~=1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
precommit = "pre-commit install"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
split_before_logical_operator = true

[tool.isort]
py_version = "py38"
line_length = 120

[tool.autopep8]
max_line_length = 120
ignore = "E501"
in-place = true
recursive = true
aggressive = 3 # Change if you don't want it making anything more than whitespace changes.
